--- a/demo/sect-charts.html
+++ b/demo/sect-charts.html
@@ -13,7 +13,13 @@
 <section data-hide-inking-canvas>
     <h4>Embed Altair (Vega-Lite) diagrams</h4>
     <p>An interactive line chart from <a href="https://altair-viz.github.io/gallery/multiline_tooltip.html">Altair Gallery</a>.</p>
-    <iframe class="r-stretch" data-vega="img/altair-timeline.json"></iframe>
+    <div class="r-stretch" data-vega="img/altair-timeline.json"></div>
+</section>
+
+<section data-hide-inking-canvas>
+    <h4>Embed Altair (Vega-Lite) diagrams</h4>
+    <p>Another Altair example. Brush (click+drag) the left chart and/or click the legend on the right.</p>
+    <iframe class="r-stretch" data-vega="img/altair-dashboard.json"></iframe>
 </section>
 
 <section data-hide-inking-canvas>
