--- a/demo/sect-inking.html
+++ b/demo/sect-inking.html
@@ -39,5 +39,5 @@
         data-show-inking-canvas
         data-inking-canvas-src="img/canvas-content-preload.json">
     <p>This is a slide with content saved from one of the previous presentations.</p>
-    <p>Note that you can still click the \(e=mc^2\) math formula and press <kbd>=</kbd> to change it.</p>
+    <p>Note that you can still click the \(e=mc^2\) math formula and press <kbd>=</kbd> or just double-click the formula to change it.</p>
 </section>
