--- a/demo/sect-math.html
+++ b/demo/sect-math.html
@@ -49,15 +49,15 @@
     </div>
 </section>
 
-<section>
+<section data-menu-title="Math in SVG typeset with MathJax">
     <h3>Math + SVG</h3>
     <p>Below come two examples of embedding SVG with math typeset on-the-fly with MathJax.</p>
     <p>Native Reveal.js fragments are supported independently of MathJax</p>
 </section>
-<section>
+<section data-menu-title="Math in SVG typeset with MathJax">
     <svg class="r-stretch" data-outer-html="img/venn-diagram.svg"></svg>
 </section>
-<section>
+<section data-menu-title="Math in SVG typeset with MathJax">
     <div class="r-stretch" style="transform: scale(0.5)" data-inner-html="img/absolute-value-composition.svg"></div>
 </section>
 
