--- a/demo/sect-pdf.html
+++ b/demo/sect-pdf.html
@@ -3,7 +3,7 @@
     <p>Powered by <a href="https://github.com/mozilla/pdf.js">PDF.js</a></p>
 </section>
 
-<section title="PDF images">
+<section data-menu-title="PDF images">
     <h4>Embedding a single page of a PDF file</h4>
     <canvas class="r-stretch"
             data-pdf="img/pdf-example.pdf"
@@ -11,7 +11,7 @@
     </canvas>
 </section>
 
-<section title="PDF images" data-hide-inking-canvas>
+<section data-menu-title="PDF images" data-hide-inking-canvas>
     <h4>Embedding multiple pages of a PDF file (scrollable)</h4>
     <canvas
             class="r-stretch"
@@ -23,7 +23,7 @@
     ></canvas>
 </section>
 
-<section title="PDF images">
+<section data-menu-title="PDF images">
     <h4>Embedding multiple pages of a PDF file (as fragments)</h4>
     <canvas
             class="r-stretch auto-fragmentize r-stack"
