Minor fixes in the demo presentations.

--- a/demo/sect-math.html
+++ b/demo/sect-math.html
@@ -8,11 +8,7 @@
 <section data-menu-title="Definitions">
     <div class="definition">
         <div class="title">Definition of a compact set</div>
-        <div class="statement">A subset of Euclidean space is called <span class="term">compact</span> if it is</div>
-        <ul>
-            <li class="fragment fade-in-then-semi-out">closed,</li>
-            <li class="fragment fade-in-then-semi-out">bounded.</li>
-        </ul>
+        <div class="statement">A subset of Euclidean space is called <span class="term">compact</span> if it is <span class="fragment">closed</span> <span class="fragment">and bounded.</span></div>
     </div>
 </section>
 
@@ -37,7 +33,7 @@
 <section data-menu-title="Discrete logarithm">
     <div class="proposition">
         <div class="statement">
-            <p>If we fix a primitive root \(\alpha\) in a field \(\bbF\),
+            <p>If we fix a primitive root \(\alpha\) in a finite field \(\bbF\),
             then for every \(x\in \bbF\setminus\{0\}\) we can define a
             <span class="term">discrete logarithm</span>: \(\log_\alpha x \), having many properties similar to the “ordinary logarithm”:</p>
             <ul>
