--- a/demo/sect-webcam.html
+++ b/demo/sect-webcam.html
@@ -5,4 +5,5 @@
         <li><kbd>C</kbd> to turn the webcam on/off.</li>
         <li><kbd>Shift+C</kbd> to maximize/minimize the webcam area</li>
     </ul>
+    <p>Note: you need to give the slideshow webpage the permission to access the webcam to use this feature.</p>
 </section>
