--- a/demo/demo.html
+++ b/demo/demo.html
@@ -11,11 +11,9 @@
 
     <link rel="stylesheet" href="../reveal/dist/theme/beige.css" id="theme">
 
-    <link rel="stylesheet" href="../reveal/plugin/highlight/monokai.css" id="highlight-theme">
-
     <link rel="stylesheet" href="../reveal-custom/css/extras.css">
 
-    <!-- Only include those if embedding Apache ECharts: -->
+    <!-- Only include this if embedding Apache ECharts: -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.4.2/echarts.min.js"></script>
     <!-- Only include this if embedding 3D Apache ECharts: -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts-gl/2.0.8/echarts-gl.min.js"></script>
@@ -84,42 +82,16 @@
 
 <!-- MathJax/KaTeX macros that you wish to be available in the slide deck. -->
 <script type="text/latex" id="mathjaxPreamble">
-    \DeclareMathOperator{\roots}{roots}
-    \DeclareMathOperator{\ord}{ord}
     \DeclareMathOperator{\GCD}{GCD}
-    \newcommand{\bbA}{\mathbb{A}}
-    \newcommand{\bbB}{\mathbb{B}}
     \newcommand{\bbF}{\mathbb{F}}
     \newcommand{\bbN}{\mathbb{N}}
     \newcommand{\bbP}{\mathbb{P}}
     \newcommand{\bbQ}{\mathbb{Q}}
     \newcommand{\bbR}{\mathbb{R}}
     \newcommand{\bbZ}{\mathbb{Z}}
-    \newcommand{\calA}{\mathcal{A}}
-    \newcommand{\calB}{\mathcal{B}}
-    \newcommand{\calC}{\mathcal{C}}
-    \newcommand{\calD}{\mathcal{D}}
-    \newcommand{\calF}{\mathcal{F}}
-    \newcommand{\calG}{\mathcal{G}}
-    \newcommand{\calI}{\mathcal{I}}
-    \newcommand{\calM}{\mathcal{M}}
-    \newcommand{\calN}{\mathcal{N}}
-    \newcommand{\calO}{\mathcal{O}}
-    \newcommand{\calR}{\mathcal{R}}
-    \newcommand{\calS}{\mathcal{S}}
-    \newcommand{\bfA}{\mathbf{A}}
-    \newcommand{\bfa}{\mathbf{a}}
-    \newcommand{\bfb}{\mathbf{b}}
-    \newcommand{\bfc}{\mathbf{c}}
-    \newcommand{\bfe}{\mathbf{e}}
-    \newcommand{\bfw}{\mathbf{w}}
-    \newcommand{\bfx}{\mathbf{x}}
-    \newcommand{\bfy}{\mathbf{y}}
-    \newcommand{\bfz}{\mathbf{z}}
     \renewcommand{\emptyset}{\varnothing}
     \renewcommand{\epsilon}{\varepsilon}
     \newcommand{\Fstar}{\mathbb{F}^*}
-    \newcommand{\euler}{\varphi}
     \newcommand{\card}[1]{\lvert #1 \rvert}
     \newcommand{\eqmod}[1]{\overset{#1}{=}}
     \newcommand{\neqmod}[1]{\overset{\scriptsize{#1}}{\neq}}
@@ -132,20 +104,14 @@
             RevealContentLoader,
 
             Verticator,
-            // RevealHighlight,
-            // RevealNotes,
-
             RevealMenu,
-            // RevealZoom,
 
-            // RevealWebcam,
+            RevealWebcam,
             RevealMath,
-            // RevealInking,
+            RevealInking,
             RevealHighlightAce,
             RevealPyodide,
-
             RevealCSSAnimation,
-
             RevealVega,
             RevealMermaid
         ],
@@ -153,8 +119,6 @@
         width: 1280,
         height: 720,
         margin: 0.05,
-        // minScale: 1.0,
-        // maxScale: 1.0,
         history: true,
         transition: 'slide',
         controls: false,
@@ -179,7 +143,7 @@
         },
 
         math: {
-            renderer: 'svg', // 'svg' or 'chtml'
+            renderer: 'svg', /* 'svg' or 'chtml' for MathJax; makes no difference for KaTeX */
             svg: {
                 enabled: true,
                 mathScale: 0.0015,
@@ -188,8 +152,8 @@
                 defaultAlignment: 'C' // L/C/R for horizontal and T/M/B for vertical
             },
             fragments: true,
-            preamble: "#mathjaxPreamble", // Most macros are in the preamble (see above)
-            macros: {                     // But some macros can be provided here as well
+            preamble: "#mathjaxPreamble", /* Most macros are in the preamble (see above)  */
+            macros: {                     /* But some macros can be provided here as well */
                 zoomable: ["\\class{zoomable}{#1}", 1],
                 floor: ["{\\left\\lfloor #1 \\right\\rfloor}", 1],
                 ceil: ["{\\left\\lceil #1 \\right\\rceil}", 1],
@@ -221,14 +185,17 @@
         highlighting: {
             editorInPlace: true
         },
-        pyodide: {
+        /*pyodide: {
             preloadPackages: ['pandas']
-        },
+        },*/
         mermaid: {
             overflowVisible: '*'
         },
         zooming: {
             explicitZoomables: false,
+        },
+        webcam: {
+            initializeOnLoad: false
         },
 
         menu: {
