--- a/demo/sect-mermaid.html
+++ b/demo/sect-mermaid.html
@@ -1,6 +1,6 @@
 <section>
     <h3>Integrate mermaid.js diagrams</h3>
-    <p>Mermaid.js is a widely used diagramming tool with simple text-based diagram description.</p>
+    <p><a href="https://mermaid.js.org/">Mermaid.js</a> is a widely used diagramming tool with simple text-based diagram description.</p>
 </section>
 
 <section data-auto-animate>
@@ -17,7 +17,7 @@
     <div data-mermaid class="r-stretch"><script type="text/mermaid">
 graph LR
 A["<span data-id='learnReveal'>Try reveal.js</span>"]:::neon
-A --> B{"<span data-id='satisfied'>satisfied</span>"}
+A --> B{"<span data-id='satisfied'>satisfied?</span>"}
 B -->|yes| C["<span data-id='useIt'>use</span>"]
 B -->|no| D["<span data-id='dropIt'>drop</span>"]
 </script>
