Added info for better navigation to demo.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -32,7 +32,7 @@
     <section data-menu-title="Python code" data-inner-html="sect-python.html"></section>
     <section data-menu-title="Mermaid diagrams" data-inner-html="sect-mermaid.html"></section>
     <section data-menu-title="Declarative CSS animation" data-inner-html="sect-animation.html"></section>
-    <section data-menu-title="Summary" data-inner-html="sect-summary.html"></section>
+    <section data-menu-title="Summary" data-outer-html="sect-summary.html"></section>
 </div></div>
 
 
