--- a/demo/sect-animation.html
+++ b/demo/sect-animation.html
@@ -1,10 +1,10 @@
-<section>
+<section data-menu-title="Declarative animation of CSS properties">
     <h3>Declarative animation of CSS properties</h3>
     <p>See the slide below. Available keywords:
         apply, to, execute, show, hide, macro, initially, next, then, during, delay, reset, rewind</p>
 </section>
 
-<section>
+<section data-menu-title="Example of animation description">
     <pre><code data-language="text" data-trim>
 initially /* What to do before animation starts */
     apply color='red' to li[0,1]  /* Apply any CSS property */
