--- a/demo/sect-charts.html
+++ b/demo/sect-charts.html
@@ -1,39 +1,39 @@
-<section>
+<section data-menu-title="Embedding interactive diagrams">
     <h3>Embedding interactive diagrams</h3>
     <p>Diagrams can be embedded using the <em>actions</em> mechanism of the content loader plugin.</p>
 </section>
 
-<section data-hide-inking-canvas>
+<section data-hide-inking-canvas data-menu-title="Vega-Lite diagrams I">
     <h4>Embed Altair (Vega-Lite) diagrams</h4>
     <p>A <a href="https://networkx.org/">NetworkX</a> graph visualized with <a href="https://pypi.org/project/nx-altair/">nx_altair</a> and displayed using
-        <a href="http://github.com/vega/vega-embed">Vega-Embed</a>, pan/zoom with mouse.</p>
+        <a href="https://github.com/vega/vega-embed">Vega-Embed</a>, pan/zoom with mouse.</p>
     <iframe class="r-stretch" data-vega="img/altair-graph.json"></iframe>
 </section>
 
-<section data-hide-inking-canvas>
+<section data-hide-inking-canvas data-menu-title="Vega-Lite diagrams II">
     <h4>Embed Altair (Vega-Lite) diagrams</h4>
     <p>An interactive line chart from <a href="https://altair-viz.github.io/gallery/multiline_tooltip.html">Altair Gallery</a>.</p>
     <div class="r-stretch" data-vega="img/altair-timeline.json"></div>
 </section>
 
-<section data-hide-inking-canvas>
+<section data-hide-inking-canvas data-menu-title="Vega-Lite diagrams III">
     <h4>Embed Altair (Vega-Lite) diagrams</h4>
     <p>Another Altair example. Brush (click+drag) the left chart and/or click the legend on the right.</p>
     <iframe class="r-stretch" data-vega="img/altair-dashboard.json"></iframe>
 </section>
 
-<section data-hide-inking-canvas>
+<section data-hide-inking-canvas data-menu-title="Apache eCharts I">
     <h4>Embed Apache ECharts</h4>
     <p>3D plots using <a href="https://echarts.apache.org/examples/en/index.html#chart-type-surface">Apache ECharts</a>. Interact using mouse.</p>
     <div class="echart r-stretch" data-inner-text="img/echarts-3d-1.js"></div>
 </section>
 
-<section data-hide-inking-canvas>
+<section data-hide-inking-canvas data-menu-title="Apache eCharts II">
     <h4>Embed Apache ECharts</h4>
     <div class="echart r-stretch" data-inner-text="img/echarts-3d-2.js"></div>
 </section>
 
-<section data-hide-inking-canvas>
+<section data-hide-inking-canvas data-menu-title="Apache eCharts III">
     <h4>Embed Apache ECharts</h4>
     <div class="echart r-stretch" data-inner-text="img/echarts-3d-3.js"></div>
 </section>
