--- a/demo/sect-math.html
+++ b/demo/sect-math.html
@@ -1,4 +1,4 @@
-<section>
+<section data-menu-title="Examples of math lecture slides">
     <h3>Math in Reveal.js</h3>
     <p>Below there are some slides showcasing math typesetting within slides.</p>
     <p>Note that you can have native reveal.js fragments inside math formulas (for both <a href="https://github.com/KaTeX/KaTeX">KaTeX</a>- and
