--- a/demo/sect-mermaid.html
+++ b/demo/sect-mermaid.html
@@ -1,9 +1,9 @@
-<section>
+<section data-menu-title="Mermaid.js diagrams">
     <h3>Integrate mermaid.js diagrams</h3>
     <p><a href="https://mermaid.js.org/">Mermaid.js</a> is a widely used diagramming tool with simple text-based diagram description.</p>
 </section>
 
-<section data-auto-animate>
+<section data-auto-animate data-menu-title="Mermaid.js diagrams I">
     <h4>TODO as a list:</h4>
     <ul>
         <li><span data-id="learnReveal">Try reveal.js</span></li>
@@ -12,7 +12,7 @@
     </ul>
 </section>
 
-<section data-auto-animate>
+<section data-auto-animate data-menu-title="Mermaid.js diagrams II">
     <h4>TODO as a mermaid diagram:</h4>
     <div data-mermaid class="r-stretch"><script type="text/mermaid">
 graph LR
