--- a/demo/sect-python.html
+++ b/demo/sect-python.html
@@ -1,10 +1,10 @@
-<section>
+<section data-menu-title="Python coding">
   <h3>Python live coding in the slides</h3>
   <p>Python code execution powered by <a href="https://pyodide.org/">Pyodide</a>.
     Highlighting powered by <a href="https://ace.c9.io/">Ace Editor</a></p>
 </section>
 
-<section data-hide-inking-canvas>
+<section data-hide-inking-canvas data-menu-title="Ace.js powered code blocks">
   <p>This code is loaded with <code>data-inner-text="..."</code></p>
   <p>You can edit this code. Just click on it.</p>
   <pre><code
@@ -16,7 +16,7 @@
   <p>After editing press <kbd>ESC</kbd> to exit editing mode without saving or <kbd>Ctrl+Enter</kbd> to save.</p>
 </section>
 
-<section data-hide-inking-canvas>
+<section data-hide-inking-canvas data-menu-title="Python code I">
   <p>The code below is run at the beginning of the slideshow and the result is displayed in a separate fragment (press <kbd>Space</kbd> to show the fragment). You can edit the code and press <kbd>Ctrl+Enter</kbd> to recompute the result.</p>
   <pre><code
           data-inner-text="code/example-autorun.py"
@@ -28,7 +28,7 @@
           data-editor-in-place></code></pre>
 </section>
 
-<section data-hide-inking-canvas>
+<section data-hide-inking-canvas data-menu-title="Python code II-1">
   <pre><code
           data-stdout="#seperateoutput"
           data-language="python"
@@ -44,13 +44,13 @@ for i in range(5, -1, -1):
   <p>The error message is output onto the next slide. You can also edit and rerun this piece of code.</p>
 </section>
 
-<section data-hide-inking-canvas>
+<section data-hide-inking-canvas data-menu-title="Python code II-2">
   <pre><code
           id="seperateoutput"
           data-language="text"></code></pre>
 </section>
 
-<section data-hide-inking-canvas>
+<section data-hide-inking-canvas data-menu-title="Reserving lines">
   <p>You can reserve several lines of code for the in-class coding:</p>
   <pre><code
           data-language="python"
