--- a/demo/sect-summary.html
+++ b/demo/sect-summary.html
@@ -1,4 +1,4 @@
-<section>
+<section data-menu-title="Summary I">
     <h4>Summary (I)</h4>
     <ul>
         <li><code>content-loader.js</code> &mdash; load the slide deck, images etc from different files, load PDFs, perform automated actions on the loaded content, </li>
@@ -6,7 +6,7 @@
         <li><code>pyodide.js</code> &mdash; live python code execution on the slides, plays nicely with <code>highlight-ace.js</code>,</li>
     </ul>
 </section>
-<section>
+<section data-menu-title="Summary II">
     <h4>Summary (II)</h4>
     <ul>
         <li><code>inking.js</code> &mdash; interactive whiteboard with free handwriting, SVG images, math formulas (best if used along <code>math.js</code>), + mouse spotlight,</li>
@@ -14,7 +14,7 @@
         <li><code>math-katex.js</code> &mdash; a math plugin powered by KaTeX, designed to be interchangeable with <code>math.js</code> (only lacking typeset capabilities of math inside SVGs),</li>
     </ul>
 </section>
-<section>
+<section data-menu-title="Summary III"  data-transition="zoom-out">
     <h4>Summary (III)</h4>
     <ul>
         <li><code>mermaid.js</code> &mdash; integrate mermaid.js diagrams into your slides,</li>
@@ -23,7 +23,7 @@
     </ul>
 </section>
 
-<section>
+<section data-menu-title="Contacts" data-transition="zoom">
     <h4>Contact me</h4>
     <p><a href="https://www.dainiak.com">www.dainiak.com</a></p>
 </section>
