--- a/demo/sect-title.html
+++ b/demo/sect-title.html
@@ -1,2 +1,10 @@
-<h2>Reveal.js plugins for Math &amp; CS instructors</h2>
-<footer>Alex Dainiak</footer>
+<section data-menu-title="Title">
+    <h2>Reveal.js plugins for Math &amp; CS instructors</h2>
+    <h3>By <a href="https://www.dainiak.com">Alex Dainiak</a></h3>
+    <ul style="padding-top: 1em">
+        <li>Use <kbd>Space</kbd> to navigate slide-by-slide.</li>
+        <li>Press <kbd>M</kbd> to show the menu with the table of contents.</li>
+        <li>Press <kbd>Esc</kbd> for overview.</li>
+        <li>Having a look into source code along viewing the demo would be a plus.</li>
+    </ul>
+</section>
