--- a/demo/sect-webcam.html
+++ b/demo/sect-webcam.html
@@ -1,9 +1,10 @@
-<section>
+<section data-menu-title="Webcam plugin">
 <h4>Webcam features</h4>
-    <p>You can show you the stream of your webcam alongside the slides. Press:</p>
+    <p>You can show you the stream of your webcam alongside the slides.</p>
+    <p>Note: you need to give the slideshow webpage the permission to access the webcam to use this feature.
+        Press:</p>
     <ul>
         <li><kbd>C</kbd> to turn the webcam on/off.</li>
         <li><kbd>Shift+C</kbd> to maximize/minimize the webcam area</li>
     </ul>
-    <p>Note: you need to give the slideshow webpage the permission to access the webcam to use this feature.</p>
 </section>
