--- a/demo/sect-inking.html
+++ b/demo/sect-inking.html
@@ -1,9 +1,9 @@
-<section>
+<section data-menu-title="Interactive whiteboard">
     <h3>Interactive whiteboard</h3>
     <p>Powered by <a href="https://github.com/fabricjs/fabric.js">Fabric.js</a></p>
 </section>
 
-<section data-show-inking-canvas>
+<section data-show-inking-canvas data-menu-title="Interactive whiteboard I">
     <p>Try the following keys:</p>
     <ul>
         <li><kbd>Ctrl+LeftClick+Drag</kbd> to draw freely</li>
@@ -15,7 +15,7 @@
     </ul>
 </section>
 
-<section data-show-inking-canvas>
+<section data-show-inking-canvas data-menu-title="Interactive whiteboard II">
     <p>Available keys (contd.):</p>
     <ul>
         <li><kbd>q</kbd> to show/hide canvas</li>
@@ -26,16 +26,21 @@
 </section>
 
 <section
+        data-menu-title="Interactive whiteboard: SVG I"
         data-show-inking-canvas
         data-inking-canvas-src="img/venn-diagram-unlabeled.svg::img/preload-test.svg">
     This is a slide with preloaded canvas content from multiple SVG files. You can move it around and resize it.
 </section>
 
-<section data-show-inking-canvas data-inking-canvas-src="img/venn-diagram-unlabeled.svg:split">
+<section
+        data-menu-title="Interactive whiteboard: SVG II"
+        data-show-inking-canvas
+        data-inking-canvas-src="img/venn-diagram-unlabeled.svg:split">
     This is a slide with preloaded SVG which is split into individual pieces. Try dragging them around!
 </section>
 
 <section
+        data-menu-title="Interactive whiteboard: JSON"
         data-show-inking-canvas
         data-inking-canvas-src="img/canvas-content-preload.json">
     <p>This is a slide with content saved from one of the previous presentations.</p>
