--- a/demo/sect-pdf.html
+++ b/demo/sect-pdf.html
@@ -1,9 +1,9 @@
-<section>
+<section data-menu-title="PDF content embedding">
     <h3>Embedding PDFs as images</h3>
     <p>Powered by <a href="https://github.com/mozilla/pdf.js">PDF.js</a></p>
 </section>
 
-<section data-menu-title="PDF images">
+<section data-menu-title="Single page">
     <h4>Embedding a single page of a PDF file</h4>
     <canvas class="r-stretch"
             data-pdf="img/pdf-example.pdf"
@@ -11,7 +11,7 @@
     </canvas>
 </section>
 
-<section data-menu-title="PDF images" data-hide-inking-canvas>
+<section data-menu-title="Multiple pages I" data-hide-inking-canvas>
     <h4>Embedding multiple pages of a PDF file (scrollable)</h4>
     <canvas
             class="r-stretch"
@@ -22,7 +22,7 @@
     ></canvas>
 </section>
 
-<section data-menu-title="PDF images">
+<section data-menu-title="Multiple pages II">
     <h4>Embedding multiple pages of a PDF file (as fragments)</h4>
     <canvas
             class="r-stretch auto-fragmentize r-stack"
