--- a/demo/sect-title.html
+++ b/demo/sect-title.html
@@ -1,6 +1,7 @@
 <section data-menu-title="Title">
     <h2>Reveal.js plugins for Math &amp; CS instructors</h2>
     <h3>By <a href="https://www.dainiak.com">Alex Dainiak</a></h3>
+    <a href="https://github.com/dainiak/revealjs-plugins">See the source code on GitHub</a>
     <ul style="padding-top: 1em">
         <li>Use <kbd>Space</kbd> to navigate slide-by-slide.</li>
         <li>Press <kbd>M</kbd> to show the menu with the table of contents.</li>
