--- a/demo/demo.html
+++ b/demo/demo.html
@@ -202,6 +202,15 @@
             titleSelector: 'h1, h2, h3, h4, h5, h6, figcaption, div.theorem > div.title',
             // autoOpen: true,
             // sticky: true
+        },
+        vegaOptions: {
+            mode: 'vega-lite',
+            theme: 'auto',
+            renderer: 'canvas',
+            actions: false,
+            tooltip: {
+                theme: 'fivethirtyeight'
+            }
         }
     });
 </script>
