--- a/demo/sect-python.html
+++ b/demo/sect-python.html
@@ -10,8 +10,7 @@
   <pre><code
             data-inner-text="code/example.py"
             data-language="python"
-            contenteditable="true"
-            data-editor-in-place></code></pre>
+            contenteditable="true"></code></pre>
 
   <p>After editing press <kbd>ESC</kbd> to exit editing mode without saving or <kbd>Ctrl+Enter</kbd> to save.</p>
 </section>
