add dedentation for mermaid diagrams

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -184,7 +184,11 @@
             preloadPackages: ['pandas']
         },*/
         mermaid: {
-            overflowVisible: '*'
+            overflowVisible: '*',
+            // iconPacks: {
+            //     "logos": "https://unpkg.com/@iconify-json/logos@1/icons.json",
+            //     "lucide": "https://unpkg.com/@iconify-json/lucide@1/icons.json"
+            // }
         },
         zooming: {
             explicitZoomables: false,
