update menu plugin; add dedent to highlight-ace.js; add bokeh.js plugin

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -21,7 +21,7 @@
     <section data-menu-title="Webcam" data-inner-html="sect-webcam.html"></section>
     <section data-menu-title="Math" data-inner-html="sect-math.html"></section>
     <section data-menu-title="Inking" data-inner-html="sect-inking.html"></section>
-    <section data-menu-title="Embedding vega-lite charts" data-inner-html="sect-charts.html"></section>
+    <section data-menu-title="Embedding Vega-Lite Charts" data-inner-html="sect-charts.html"></section>
     <section data-menu-title="Loading content and executing actions" data-inner-html="sect-external.html"></section>
     <section data-menu-title="PDF inclusion" data-inner-html="sect-pdf.html"></section>
     <section data-menu-title="Python code" data-inner-html="sect-python.html"></section>
