--- a/demo/demo.html
+++ b/demo/demo.html
@@ -217,7 +217,12 @@
                     theme: 'fivethirtyeight'
                 }
             }
-        }
+        },
+        verticator: {
+            color: '#000',
+            inversecolor: '#fff',
+            tooltip: true,
+        },
     });
 </script>
 
